src/main/java/com/example/cotacao/errors/OfferNotFoundError.java
package com.example.cotacao.errors;

public class OfferNotFoundError extends BusinessError {

    public OfferNotFoundError() {
        super("Oferta não encontrada.");
    }
    
}
